// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@universal-labs/styled > CustomView render 1`] = `
<div
  className="css-view-175oi2r shadow-sm web:p-10 flex-1"
  dir={null}
/>
`;

exports[`@universal-labs/styled > StyledView render 1`] = `
<div
  className="css-view-175oi2r flex-1"
  dir={null}
/>
`;
